[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/Arcade/Scripts/M05-Arcade-Player-Select-Camp.gd" type="Script" id=1]
[ext_resource path="res://Maps/Campaign-mode/World_01/Map_C_W01_F_01_The_Warden.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/Grids/menu_8x2_01.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Menu/Player_Select_8x2.png" type="Texture" id=4]
[ext_resource path="res://Menus/Parts/M20-Robit_Preview_01.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/Arcade/M07-Arcade-Map-Select-Campaign_9.tscn" type="PackedScene" id=6]

[node name="M03-Arcade-Mode-Select" type="Node2D"]
script = ExtResource( 1 )
camp_map = ExtResource( 2 )
camp_map_screen = ExtResource( 6 )

[node name="Menu_8x2_01" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )

[node name="Menu_8x2_02" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )
player = 2
pos = 2

[node name="Menu_8x2_03" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )
player = 3
pos = 3

[node name="Menu_8x2_04" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )
player = 4
pos = 4

[node name="Menu_8x2_05" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )
player = 5
pos = 5

[node name="Menu_8x2_06" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )
player = 6
pos = 6

[node name="Menu_8x2_07" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )
player = 7
pos = 7

[node name="Menu_8x2_08" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 960, 825 )
player = 8
pos = 8

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 825 )
texture = ExtResource( 4 )

[node name="Preview_Pics" type="Node2D" parent="."]

[node name="Robit_Preview_01" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 840, 540 )

[node name="Robit_Preview_02" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 1070, 540 )
player = 2

[node name="Robit_Preview_03" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 620, 540 )
player = 3

[node name="Robit_Preview_04" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 1300, 540 )
player = 4

[node name="Robit_Preview_05" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 390, 540 )
player = 5

[node name="Robit_Preview_06" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 1530, 540 )
player = 6

[node name="Robit_Preview_07" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 160, 540 )
player = 7

[node name="Robit_Preview_08" parent="Preview_Pics" instance=ExtResource( 5 )]
visible = false
position = Vector2( 1760, 540 )
player = 8
